--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/rival6821/gulp-test#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.5.4",
-    "gulp": "^4.0.2",
     "@babel/core": "^7.5.4",
-    "@babel/register": "^7.4.4"
+    "@babel/preset-env": "^7.5.4",
+    "@babel/register": "^7.4.4",
+    "del": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-pug": "^4.0.1"
   },
   "dependencies": {}
 }
