--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@babel/register": "^7.4.4",
     "del": "^5.0.0",
     "gulp": "^4.0.2",
-    "gulp-pug": "^4.0.1"
+    "gulp-pug": "^4.0.1",
+    "gulp-webserver": "^0.9.1"
   },
   "dependencies": {}
 }
