--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "gulp dev",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,15 @@
     "gulp-pug": "^4.0.1",
     "gulp-webserver": "^0.9.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babelify": "^10.0.0",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-bro": "^1.0.3",
+    "gulp-csso": "^3.0.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-image": "^5.1.0",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.12.0",
+    "uglifyify": "^5.0.1"
+  }
 }
